# portal

./: .codeclimate.yml  .dockerignore  .env.sample  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README.md  TestSummary.md  admin.py  artifact_edit.py  chameleon_env.sample  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  filters.py  forms.py  manage.py  models.py  package-lock.json  package.json  pybliometrics.cfg  pyproject.toml  requirements-frozen.txt  requirements.txt  tests-compose.yml  tests.py  tox.ini  upper-constraints.txt  urls.py  utils.py  views.py  vue.config.js
.deprecated_apps/documentation/: views.py
.deprecated_apps/github_content/: urls.py  views.py
.github/: CODEOWNERS  dependabot.yml
.github/actions/: yamllint.yml
.github/workflows/: build-portal.yml  ci.yml  lint-ansible.yml  lint-docker.yml  lint-javascript.yml  lint-python.yml  lint-shell.yml  lint-spelling.yml  lint-style.yml  lint-yaml.yml  linter.yml  test.yml  test_portal.yml
_apps/about/: admin.py
_apps/allocation/: urls.py
_apps/news/: admin.py  menus.py  models.py  views.py
_apps/status/: admin.py  models.py
_apps/user/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
about/: menus.py  models.py  urls.py  views.py
aldryn-bootstrap3/aldryn_bootstrap3/: models.py
allocation/: admin.py  forms.py  menus.py  models.py  urls.py  views.py
allocations/: Gruntfile.js  admin.py  allocation_mapper.py  allocations_api.py  bower.json  models.py  package.json  tasks.py  tests.py  transient_models.py  urls.py  utils.py  views.py
allocations/migrations/: 0001_initial.py  0002_auto_20200528_0914.py  0002_auto_20200604_1505.py  0003_auto_20200708_1116.py  0004_auto_20210107_1857.py  0005_add_waiting_status_to_allocation.py  0006_allocation_expiration_warning_issued.py  0007_charge.py  0008_allocation_balance_service_version.py  0009_chargebudget.py  0010_allocation_low_allocation_warning_issued.py  0011_allocation_ticket_id.py
allocations/sass/: custom.scss
allocations/scripts/: app.js  directive.js  service.js
appliance_catalog/: .bowerrc  .jshintrc  Gruntfile.js  admin.py  bower.json  forms.py  models.py  package.json  serializers.py  urls.py  views.py
appliance_catalog/migrations/: 0001_initial.py  0002_auto_20160114_2107.py  0002_remove_appliance_kvm_uc_appliance_id.py  0003_auto_20160106_1616.py  0003_auto_20160119_1935.py  0004_auto_20160119_2052.py  0005_appliance_project_flagged.py  0006_auto_20160122_2208.py  0007_appliance_documentation.py  0008_auto_20160210_2051.py  0009_auto_20160307_1541.py  0010_auto_20160307_1601.py  0011_appliance_template.py  0012_appliance_needs_review.py  0013_auto_20171006_1336.py  (+4 more)
balance_service/: admin.py  exceptions.py  models.py  tests.py  urls.py  views.py
blog_comments/: admin.py  forms.py  models.py  urls.py  views.py
cc_early_user_support/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
chameleon/: ChameleonOIDCAuthBackend.py  __init__.py  admin.py  celery.py  constants.py  context_processors.py  decorators.py  edge_hw_discovery_api.py  keystone_auth.py  menus.py  models.py  os_login.py  research_impacts.py  settings-noldap.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
chameleon_cms_integrations/: cms_app.py  cms_apps.py  cms_menus.py  menu.py
chameleon_mailman/: forms.py  models.py  tasks.py  views.py
chameleon_openid/: admin.py  auth.py  backend.py  models.py  tests.py  urls.py  utils.py  views.py
chameleon_token/: __init__.py  admin.py  apps.py  decorators.py  models.py
djangoRT/: admin.py  forms.py  models.py  rtModels.py  rtUtil.py  tasks.py  tests.py  urls.py  views.py
djangocms_blog/: admin.py  models.py  views.py
docker/: README.md
docker-conf/: nginx-app.conf  supervisor-app.conf  uwsgi.ini
documentation/: menus.py  urls.py  views.py
etc/: chameleon-portal.service
g5k_discovery/: Gruntfile.js  README.md  README.rst  bower.json  g5k_discovery_api.py  package.json  urls.py  views.py
github_content/: urls.py  util.py  views.py
help/: menus.py
migrations/: 0001_initial.py  0002_remove_author_middle_initial.py  0003_auto_20190708_1611.py  0004_auto_20190709_1903.py  0004_auto_20190709_2202.py  0005_auto_20190709_1904.py  0006_merge_20190709_2207.py  0007_auto_20190709_2210.py  0008_artifact_associated_artifacts.py  0009_author_full_name.py  0010_auto_20190712_2126.py  0011_auto_20190712_2130.py  0012_auto_20190712_2145.py  0013_auto_20190712_2147.py  0014_auto_20190715_1429.py  0015_auto_20190715_1523.py  0016_auto_20190729_2109.py  0017_artifact_zenodo_id.py  0018_auto_20190820_2202.py
news/: menus.py  models.py  urls.py
person/: admin.py  models.py
projects/: README.md  admin.py  apps.py  forms.py  membership.py  models.py  monkey_patching.py  projectModel.py  project_util.py  pub_utils.py  pub_views.py  serializer.py  tasks.py  tests.py  urls.py  util.py  views.py
publications/: forms.py  models.py  urls.py  views.py
rt_config/: rt_config.pm  start.sh
sharing_portal/: admin.py  apps.py  conf.py  forms.py  models.py  tasks.py  trovi.py  urls.py  utils.py  views.py  zenodo.py
site_menu/: menus.py
static/: bower.json
status/: urls.py  views.py
tas/: admin.py  auth.py  forms.py  menu.py  menus.py  models.py  tests.py  urls.py  util.py  views.py
tests/: __init__.py  test_artifact.py  test_author.py  test_label.py  test_utils.py  test_views.py
usage/: Gruntfile.js  admin.py  bower.json  forms.py  models.py  package.json  urls.py  views.py
user/: admin.py  forms.py  menus.py  models.py  urls.py  views.py
user_news/: admin.py  cms_app.py  cms_apps.py  cms_models.py  cms_plugins.py  cms_toolbar.py  cms_toolbars.py  forms.py  middleware.py  models.py  urls.py  views.py
user_profile/: menus.py  models.py  urls.py  views.py
util/: dynamic_drf_api.py  filters.py  keycloak_client.py  project_allocation_mapper.py  querysets.py  serializers.py  sql_format.py  views.py
webinar_registration/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+726 files in other folders)
